--- a/services/cbioproxy/nginx.conf
+++ b/services/cbioproxy/nginx.conf
@@ -23,13 +23,11 @@
 pcre_jit on;
 
 # make env vars available to lua
-env KEYCLOAK_URL;
-env KEYCLOAK_REALM;
-env KEYCLOAK_CLIENT;
-env KEYCLOAK_SECRET;
-env CBIOPORTAL_URL;
 env NGINX_LOGINREQUIRED;
-
+env CBIOPORTAL_URL;
+env KEYCLOAK_REALM;
+env KEYCLOAK_CLIENT_FHIRSPARK;
+env KEYCLOAK_SECRET_FHIRSPARK;
 
 error_log logs/error.log;
 #error_log  logs/error.log  notice;
@@ -48,6 +46,7 @@ events
 http
 {
   lua_package_path '~/lua/?.lua;;';
+  lua_ssl_trusted_certificate /usr/local/share/ca-certificates/keycloak.cer;
   resolver local=on;
   # cache for discovery metadata documents
   lua_shared_dict discorvery 1m;
