--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Release version e.g. 2022q2 or simply latest
-RELEASE=2022q2
+RELEASE=2024q1
 
 # Network configuration
 PORT=8080
@@ -24,23 +24,25 @@ ENABLE_QUICKSEARCH=true
 
 # Authentication configuration
 LOGINREQUIRED=false
-AUTHENTICATE=false #either false oder saml
+AUTHENTICATE=false # either false or oauth2
 # generate keystore using: keytool -genkey -alias secure-key -keyalg RSA -keystore samlKeystore.jks
 #KEYSTORE_KEY=secure-key
 #KEYSTORE_PASSWORD=somepassword
 #KEYCLOAK_URL=
 #CBIOPORTAL_URL=
 #KEYCLOAK_REALM=
+#KEYCLOAK_CLIENT_CBIOPORTAL=
+#KEYCLOAK_SECRET_CBIOPORTAL=
 
 # keycloak for fhirspark
-#KEYCLOAK_CLIENT=
-#KEYCLOAK_SECRET=
+#KEYCLOAK_CLIENT_FHIRSPARK=
+#KEYCLOAK_SECRET_FHIRSPARK=
 
 # Proxy settings, if required
 #HTTPS_PROXY_HOST=
 #HTTPS_PROXY_PORT=
 
 #Annotation configuration
-ENABLE_CIVIC=true
+ENABLE_CIVIC=false # CIVIC is currently broken
 # Please disable (set to false) when using cBioPortal with patient identifiable data due My Cancer Genome license restrictions.
 ENABLE_MYCANCERGENOME=false
