--- a/docker-compose-research.yml
+++ b/docker-compose-research.yml
@@ -11,9 +11,8 @@ services:
       DB_PASSWORD: ${MYSQL_USER_PASSWORD:-P@ssword1}
     volumes:
      - ./study:/study/:z
-     - ./config/portal.properties:/cbioportal/application.properties:Z
-     - ./config/client-tailored-saml-idp-metadata.xml:/cbioportal-webapp/WEB-INF/classes/client-tailored-saml-idp-metadata.xml:Z
-     - ./config/samlKeystore.jks:/cbioportal-webapp/WEB-INF/classes/samlKeystore.jks:Z
+     - ./config/application.properties:/cbioportal/application.properties:Z
+     - ./config/security.properties:/cbioportal/security.properties:Z
      - ./config/${LOGO:-pm4onco.png}:/cbioportal-webapp/webapp/images/${LOGO:-pm4onco.png}:Z
      - cbioportal_portalinfo:/cbioportal/portalinfo:z
     depends_on:
@@ -33,26 +32,20 @@ services:
       "-Dmycancergenome.show=${ENABLE_MYCANCERGENOME:-true}",
       "-Dquick_search.enabled=${ENABLE_QUICKSEARCH:-true}",
       "-Dfilter_groups_by_appname=false",
-      "-Dsaml.sp.metadata.entityid=cbioportal",
-      "-Dsaml.sp.metadata.entitybaseurl=${CBIOPORTAL_URL}",
-      "-Dsaml.idp.metadata.location=classpath:/client-tailored-saml-idp-metadata.xml",
-      "-Dsaml.idp.metadata.entityid=${KEYCLOAK_URL}/realms/${KEYCLOAK_REALM}",
-      "-Dsaml.keystore.location=classpath:/samlKeystore.jks",
-      "-Dsaml.keystore.private-key.key=${KEYSTORE_KEY}",
-      "-Dsaml.keystore.password=${KEYSTORE_PASSWORD}",
-      "-Dsaml.keystore.default-key=${KEYSTORE_KEY}",
-      "-Dsaml.keystore.private-key.password=${KEYSTORE_PASSWORD}",
-      "-Dsaml.idp.metadata.attribute.email=email",
-      "-Dsaml.idp.metadata.attribute.role=Role",
-      "-Dsaml.custom.userservice.class=org.cbioportal.security.spring.authentication.keycloak.SAMLUserDetailsServiceImpl",
       "-Dhttps.proxyHost=${HTTPS_PROXY_HOST}",
       "-Dhttps.proxyPort=${HTTPS_PROXY_PORT}",
       "-Dskin.right_logo=${LOGO:-pm4onco.png}",
+      "-Dspring.config.location=cbioportal/application.properties",
+      "-Dauthenticate=${AUTHENTICATE:-false}",
+      "-Dspring.security.oauth2.client.provider.keycloak.user-name-attribute=name",
+      "-Dspring.security.oauth2.client.registration.keycloak.scope=openid,email,roles",
+      "-Dspring.security.oauth2.client.provider.keycloak.issuer-uri=${KEYCLOAK_REALM:-}",
+      "-Dspring.security.oauth2.client.registration.keycloak.client-id=${KEYCLOAK_CLIENT_CBIOPORTAL:-}",
+      "-Dspring.security.oauth2.client.registration.keycloak.client-secret=${KEYCLOAK_SECRET_CBIOPORTAL:-}",
+      "-Dsecurity.cors.allowed-origins=*",
       "-cp",
       "/cbioportal-webapp:/cbioportal-webapp/lib/*",
-      "org.cbioportal.PortalApplication",
-      "--spring.config.location=cbioportal/application.properties",
-      "--authenticate=${AUTHENTICATE:-false}"
+      "org.cbioportal.PortalApplication"
     ]
   cbioportal_database:
     restart: unless-stopped
@@ -106,7 +99,7 @@ services:
       - ./services/cbioproxy/cbioportal-research.conf:/etc/nginx/conf.d/cbioportal.conf:Z
       - ./services/cbioproxy/lua_resource_config.lua:/etc/nginx/conf.d/lua_resource_config.lua:Z
       - ./reports:/usr/share/reports:Z
-      - ./config/certs:/certs:z
+      - ./config/certs:/usr/local/share/ca-certificates/:z
     ports:
       - "${PORT:-8080}:8080"
     depends_on:
