--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -69,11 +69,6 @@ server
   location /
   {
 
-    if ($NGINX_LOGINREQUIRED = 'true')
-    {
-      include /etc/nginx/conf.d/lua_auth_config.lua;
-    }
-
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
     proxy_set_header Host $http_host;
@@ -182,6 +177,23 @@ server
     {
       include /etc/nginx/conf.d/lua_auth_config.lua;
     }
+  }
+
+location /oauth2/authorization/keycloak
+  {
+    if ($NGINX_LOGINREQUIRED = 'true')
+    {
+      include /etc/nginx/conf.d/lua_auth_config.lua;
+    }
+
+    proxy_headers_hash_max_size 512;
+    proxy_headers_hash_bucket_size 64;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    proxy_pass http://cbioportal:8080;
   }
 
   location /fhir
