--- a/.github/workflows/docker-build-dev.yml
+++ b/.github/workflows/docker-build-dev.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build dev containers
-        run: docker-compose -f docker-compose-dev.yml build cbioportal
+        run: docker-compose -f compose-dev.yml build cbioportal
       - name: Build dev cbioproxy
-        run: docker-compose -f docker-compose-dev.yml build cbioproxy
+        run: docker-compose -f compose-dev.yml build cbioproxy
       - name: Login to Docker registry
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         uses: docker/login-action@v2
@@ -23,7 +23,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Push cbioportal
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
-        run: docker-compose -f docker-compose-dev.yml push cbioportal
+        run: docker-compose -f compose-dev.yml push cbioportal
       - name: Push cbioproxy
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
-        run: docker-compose -f docker-compose-dev.yml push cbioproxy
+        run: docker-compose -f compose-dev.yml push cbioproxy
