--- a/.github/workflows/docker-build-research.yml
+++ b/.github/workflows/docker-build-research.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build research containers
-        run: docker-compose -f docker-compose-research.yml build cbioportal
+        run: docker-compose -f compose-research.yml build cbioportal
       - name: Build research cbioproxy
-        run: docker-compose -f docker-compose-research.yml build cbioproxy
+        run: docker-compose -f compose-research.yml build cbioproxy
