--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build care cBioPortal
-        run: docker-compose -f docker-compose.yml build cbioportal
+        run: docker-compose -f compose.yml build cbioportal
       - name: Build care cbioproxy
-        run: docker-compose -f docker-compose.yml build cbioproxy
+        run: docker-compose -f compose.yml build cbioproxy
