fix paths on https

--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -54,9 +54,13 @@ services:
       "-Dspring.security.oauth2.client.registration.keycloak.client-id=${KEYCLOAK_CLIENT_CBIOPORTAL:-}",
       "-Dspring.security.oauth2.client.registration.keycloak.client-secret=${KEYCLOAK_SECRET_CBIOPORTAL:-}",
       "-Dsecurity.cors.allowed-origins=*",
+      "-Dserver.tomcat.remoteip.port-header=X-Forwarded-Port",
+      "-Dserver.tomcat.remoteip.protocol-header=X-Forwarded-Proto",
       "-cp",
       "/cbioportal-webapp:/cbioportal-webapp/lib/*",
       "org.cbioportal.PortalApplication"
+      # "--logging.level.org.springframework=Debug",
+      # "--logging.level.org.cbioportal=Debug"
     ]
   cbioportal_database:
     restart: unless-stopped
