--- a/services/cbioproxy/cbioportal-research.conf
+++ b/services/cbioproxy/cbioportal-research.conf
@@ -1,17 +1,19 @@
 server
 {
-
   listen 8080;
-  # listen 443 ssl
-
-  # ssl_certificate /etc/nginx/certs/ngxCert.crt;
-  # ssl_certificate_key /etc/nginx/certs/ngxKey.key;
-
-  # lua_ssl_verify_depth 2;
-  # lua_ssl_trusted_certificate /etc/nginx/certs/ngxCert.crt;
   set_by_lua $NGINX_LOGINREQUIRED 'return os.getenv("NGINX_LOGINREQUIRED")';
 
   set $session_name nginx_session;
+
+  set $spring_proto http;
+  set $spring_port 8080;
+
+  if ($http_x_forwarded_proto != "") {
+    set $spring_proto $http_x_forwarded_proto;
+  }
+  if ($http_x_forwarded_port != "") {
+    set $spring_port $http_x_forwarded_port;
+  }
 
   location ~ (/content|/css|/Data|/db-scripts|/fonts|/gfx|/images|/js|/reactapp|/swf)$
   {
@@ -51,7 +53,8 @@ server
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
     proxy_set_header Host $http_host;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Proto $spring_proto;
+    proxy_set_header X-Forwarded-Port $spring_port;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
@@ -68,7 +71,8 @@ server
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
     proxy_set_header Host $http_host;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Proto $spring_proto;
+    proxy_set_header X-Forwarded-Port $spring_port;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
