--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -1,11 +1,19 @@
 server
 {
-
   listen 8080;
   set_by_lua $NGINX_LOGINREQUIRED 'return os.getenv("NGINX_LOGINREQUIRED")';
 
-
   set $session_name nginx_session;
+
+  set $spring_proto http;
+  set $spring_port 8080;
+
+  if ($http_x_forwarded_proto != "") {
+    set $spring_proto $http_x_forwarded_proto;
+  }
+  if ($http_x_forwarded_port != "") {
+    set $spring_port $http_x_forwarded_port;
+  }
 
   location /attributes.json
   {
@@ -72,7 +80,8 @@ server
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
     proxy_set_header Host $http_host;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Proto $spring_proto;
+    proxy_set_header X-Forwarded-Port $spring_port;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
@@ -103,7 +112,8 @@ server
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
     proxy_set_header Host $http_host;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Proto $spring_proto;
+    proxy_set_header X-Forwarded-Port $spring_port;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
@@ -134,7 +144,8 @@ server
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
     proxy_set_header Host $http_host;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Proto $spring_proto;
+    proxy_set_header X-Forwarded-Port $spring_port;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
@@ -189,7 +200,8 @@ location /oauth2/authorization/keycloak
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
     proxy_set_header Host $http_host;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Proto $spring_proto;
+    proxy_set_header X-Forwarded-Port $spring_port;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
@@ -207,7 +219,8 @@ location /oauth2/authorization/keycloak
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
     proxy_set_header Host $http_host;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Proto $spring_proto;
+    proxy_set_header X-Forwarded-Port $spring_port;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
@@ -224,7 +237,8 @@ location /oauth2/authorization/keycloak
     proxy_headers_hash_max_size 512;
     proxy_headers_hash_bucket_size 64;
     proxy_set_header Host $http_host;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Proto $spring_proto;
+    proxy_set_header X-Forwarded-Port $spring_port;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
