--- a/compose.yml
+++ b/compose.yml
@@ -9,14 +9,13 @@ services:
       HTTP_PROXY: "http://${HTTPS_PROXY_HOST}:${HTTPS_PROXY_PORT}"
       NO_PROXY: "cbioportal,cbioportal_session"
       DB_PASSWORD: ${MYSQL_USER_PASSWORD:-P@ssword1}
-      SHOW_DEBUG_INFO: "true"
     volumes:
      - ./study:/study/:z
      - ./config/application.properties:/cbioportal/application.properties:Z
      - ./config/security.properties:/cbioportal/security.properties:Z
      - ./config/frontend.json:/cbioportal/frontend.json:Z
      - ./config/${LOGO:-pm4onco.png}:/cbioportal-webapp/webapp/images/${LOGO:-pm4onco.png}:Z
-     - ./config/keycloak.cer:/cbioportal/keycloak.cer:z
+     - ./config/cacerts:/etc/ssl/certs/java/cacerts:Z
      - cbioportal_portalinfo:/cbioportal/portalinfo:z
      - ./config/certs:/certs:z
     depends_on:
