verify nginx certs

--- a/services/cbioproxy/nginx.conf
+++ b/services/cbioproxy/nginx.conf
@@ -46,6 +46,7 @@ events
 http
 {
   lua_package_path '~/lua/?.lua;;';
+  lua_ssl_verify_depth 5;
   lua_ssl_trusted_certificate /usr/local/share/ca-certificates/keycloak.cer;
   resolver local=on;
   # cache for discovery metadata documents
