add always_show_study_group parameter to env file

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,10 @@ AUTHENTICATE=false # either false or oauth2
 #KEYCLOAK_CLIENT_CBIOPORTAL=
 #KEYCLOAK_SECRET_CBIOPORTAL=
 
+# Studies of specified groups can be shown to every user that has access to cBioPortal.
+# Please keep in mind that, unless specified, a study will be public by default!
+#ALWAYS_SHOW_STUDY_GROUP=PUBLIC
+
 # keycloak for fhirspark
 #KEYCLOAK_CLIENT_FHIRSPARK=
 #KEYCLOAK_SECRET_FHIRSPARK=
