add support for daa access tokens

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,10 @@ AUTHENTICATE=false # either false or oauth2
 # Please keep in mind that, unless specified, a study will be public by default!
 #ALWAYS_SHOW_STUDY_GROUP=PUBLIC
 
+# On instances with authentication it is possible to generate permanent data access tokens.
+# To enable this feature, uncomment this line. By default this feature is disabled.
+#DATA_ACCESS_TOKEN=oauth2
+
 # keycloak for fhirspark
 #KEYCLOAK_CLIENT_FHIRSPARK=
 #KEYCLOAK_SECRET_FHIRSPARK=
