--- a/compose-research.yml
+++ b/compose-research.yml
@@ -43,6 +43,14 @@ services:
       "-Dspring.security.oauth2.client.provider.keycloak.issuer-uri=${KEYCLOAK_REALM:-}",
       "-Dspring.security.oauth2.client.registration.keycloak.client-id=${KEYCLOAK_CLIENT_CBIOPORTAL:-}",
       "-Dspring.security.oauth2.client.registration.keycloak.client-secret=${KEYCLOAK_SECRET_CBIOPORTAL:-}",
+      "-Ddat.method=${DATA_ACCESS_TOKEN:-none}",
+      "-Ddat.oauth2.clientId=${KEYCLOAK_CLIENT_CBIOPORTAL:-}",
+      "-Ddat.oauth2.clientSecret=${KEYCLOAK_SECRET_CBIOPORTAL:-}",
+      "-Ddat.oauth2.issuer=${KEYCLOAK_REALM:-}",
+      "-Ddat.oauth2.accessTokenUri=${KEYCLOAK_REALM:-}/protocol/openid-connect/token",
+      "-Ddat.oauth2.userAuthorizationUri=${KEYCLOAK_REALM:-}/protocol/openid-connect/auth",
+      "-Ddat.oauth2.jwkUrl=${KEYCLOAK_REALM:-}/protocol/openid-connect/certs",
+      "-Ddat.oauth2.redirectUri=${CBIOPORTAL_URL}/api/data-access-token/oauth2",
       "-Dsecurity.cors.allowed-origins=*",
       "-Dserver.tomcat.remoteip.port-header=X-Forwarded-Port",
       "-Dserver.tomcat.remoteip.protocol-header=X-Forwarded-Proto",
