dont crash on authenticate=false

--- a/.env.example
+++ b/.env.example
@@ -25,9 +25,8 @@ ENABLE_QUICKSEARCH=true
 # Authentication configuration
 LOGINREQUIRED=false
 AUTHENTICATE=false # either false or oauth2
-# generate keystore using: keytool -genkey -alias secure-key -keyalg RSA -keystore samlKeystore.jks
-#KEYSTORE_KEY=secure-key
-#KEYSTORE_PASSWORD=somepassword
+# This MUST be a comment if you set AUTHENTICATE to false, otherwise, this should be an empty string
+#EXCLUDE_AUTOCONFIG=
 #KEYCLOAK_URL=
 #CBIOPORTAL_URL=
 #KEYCLOAK_REALM=
