--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -47,6 +47,7 @@ services:
       "-Dskin.right_logo=${LOGO:-pm4onco.png}",
       "-Dspring.config.location=cbioportal/application.properties",
       "-Dauthenticate=${AUTHENTICATE:-false}",
+      "-Dspring.autoconfigure.exclude=${EXCLUDE_AUTOCONFIG:-org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration}",
       "-Dalways_show_study_group=${ALWAYS_SHOW_STUDY_GROUP:-none}",
       "-Dspring.security.oauth2.client.provider.keycloak.user-name-attribute=name",
       "-Dspring.security.oauth2.client.registration.keycloak.scope=openid,email,roles",
