--- a/services/cbioproxy/nginx.conf
+++ b/services/cbioproxy/nginx.conf
@@ -28,6 +28,7 @@ env CBIOPORTAL_URL;
 env KEYCLOAK_REALM;
 env KEYCLOAK_CLIENT_FHIRSPARK;
 env KEYCLOAK_SECRET_FHIRSPARK;
+env PORT;
 
 error_log logs/error.log;
 #error_log  logs/error.log  notice;
