--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -2,11 +2,12 @@ server
 {
   listen 8080;
   set_by_lua $NGINX_LOGINREQUIRED 'return os.getenv("NGINX_LOGINREQUIRED")';
+  set_by_lua $PORT 'return os.getenv("PORT")';
 
   set $session_name nginx_session;
 
   set $spring_proto http;
-  set $spring_port 8080;
+  set $spring_port $PORT;
 
   if ($http_x_forwarded_proto != "") {
     set $spring_proto $http_x_forwarded_proto;
