--- a/services/cbioproxy/Dockerfile
+++ b/services/cbioproxy/Dockerfile
@@ -5,3 +5,7 @@ RUN apk update && apk add git ca-certificates && rm -rf /var/cache/apk/*
 COPY --from=static /cbioportal-webapp /usr/share/nginx/html
 RUN rm /etc/nginx/conf.d/default.conf \
     && /usr/local/openresty/luajit/bin/luarocks install lua-resty-openidc
+
+COPY ./start.sh /start.sh
+
+ENTRYPOINT [ "/start.sh" ]
