--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -16,6 +16,8 @@ server
     set $spring_port $http_x_forwarded_port;
   }
 
+  #lua_ssl_trusted_certificate /usr/local/share/ca-certificates/keycloak.cer;
+
   location /attributes.json
   {
 
