--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -181,14 +181,14 @@ services:
     container_name: cbioproxy_container
     volumes:
       - ./services/cbioproxy/nginx.conf:/usr/local/openresty/nginx/conf/nginx.conf:Z
-      - ./services/cbioproxy/cbioportal.conf:/etc/nginx/conf.d/cbioportal.conf:Z
+      - ./services/cbioproxy/cbioportal.conf:/cbioportal.conf:Z
       - ./services/cbioproxy/lua_auth_config.lua:/etc/nginx/conf.d/lua_auth_config.lua:Z
       - ./services/cbioproxy/lua_login_config.lua:/etc/nginx/conf.d/lua_login_config.lua:Z
       - ./services/cbioproxy/lua_resource_config.lua:/etc/nginx/conf.d/lua_resource_config.lua:Z
       - ./reports:/usr/share/reports:Z
       - ./config/attributes.json:/attributes.json:Z
       - ./data/tumorTypes.json:/tumorTypes.json:Z
-      - ./config/keycloak.cer:/usr/local/share/ca-certificates/keycloak.cer:z
+      - ./config/keycloak.cer:/keycloak.cer:z
     environment:
       NGINX_LOGINREQUIRED: ${LOGINREQUIRED:-false}
       KEYCLOAK_REALM: ${KEYCLOAK_REALM:-}
