--- a/services/cbioproxy/cbioportal.conf
+++ b/services/cbioproxy/cbioportal.conf
@@ -16,7 +16,7 @@ server
     set $spring_port $http_x_forwarded_port;
   }
 
-  #lua_ssl_trusted_certificate /usr/local/share/ca-certificates/keycloak.cer;
+  #lua_ssl_trusted_certificate /usr/local/share/ca-certificates/keycloak.pem;
 
   location /attributes.json
   {
