--- a/services/cbioportal/Dockerfile
+++ b/services/cbioportal/Dockerfile
@@ -19,11 +19,11 @@ RUN git clone --single-branch --branch release$VERSION https://github.com/nr2373
 WORKDIR /frontend
 RUN mvn clean install
 
-RUN git clone --single-branch --branch pm4onco https://github.com/nr23730/cbioportal.git /cbioportal
+RUN git clone --single-branch --branch pm4onco https://github.com/buschlab/cbioportal.git /cbioportal
 WORKDIR /cbioportal
 RUN cp /cbioportal/src/main/resources/application.properties.EXAMPLE /cbioportal/src/main/resources/application.properties
 
-RUN git clone --single-branch --branch pm4onco https://github.com/nr23730/cbioportal-core.git /cbioportal/core
+RUN git clone --single-branch --branch pm4onco https://github.com/buschlab/cbioportal-core.git /cbioportal/core
 
 # don't skip LoH mutations on import
 RUN sed -i 's/|| loh ||/||/' core/src/main/java/org/mskcc/cbio/portal/util/ExtendedMutationUtil.java
