add portalinfo to install

--- a/services/cbioportal/Dockerfile
+++ b/services/cbioportal/Dockerfile
@@ -96,7 +96,7 @@ COPY --from=build ${DEPENDENCY}/BOOT-INF/classes            $PORTAL_WEB_HOME/
 COPY --from=build /cbioportal/docker/web-and-data/docker-entrypoint.sh /usr/local/bin/
 
 # script for calling dumpPortalInfo.py from docker-compose
-RUN echo "cd /core/scripts && ./dumpPortalInfo.pl \$1" >> /cbioportal/dumpPortalInfo.sh
+RUN echo "cd /core/scripts && ./dumpPortalInfo.pl /cbioportal/portalinfo" >> /cbioportal/dumpPortalInfo.sh
 RUN chmod +x /cbioportal/dumpPortalInfo.sh
 
 # don't skip LoH mutations on import
