--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -141,7 +141,7 @@ services:
       - cbioportal_net
   hapiserver:
     restart: unless-stopped
-    image: docker.io/hapiproject/hapi:v6.8.0
+    image: docker.io/hapiproject/hapi:v6.10.1-tomcat
     container_name: cbioportal_fhirspark_hapiserver
     ports:
       - "8082:8080"
