--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,8 @@ AUTHENTICATE=false # either false or oauth2
 # Proxy settings, if required
 #HTTPS_PROXY_HOST=
 #HTTPS_PROXY_PORT=
+# You'll probably need to add you Keycloak here, if you still get certificate chain validation errors 
+#NOPROXY_HOSTS=
 
 #Annotation configuration
 ENABLE_CIVIC=false # CIVIC is currently broken
