--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -9,7 +9,7 @@ services:
     container_name: cbioportal_container
     environment:
       HTTP_PROXY: "http://${HTTPS_PROXY_HOST}:${HTTPS_PROXY_PORT}"
-      NO_PROXY: "cbioportal,cbioportal_session"
+      NO_PROXY: "cbioportal"
       SHOW_DEBUG_INFO: "true"
     volumes:
      - ./study:/study/:z
@@ -43,6 +43,7 @@ services:
       "-Dfilter_groups_by_appname=false",
       "-Dhttps.proxyHost=${HTTPS_PROXY_HOST}",
       "-Dhttps.proxyPort=${HTTPS_PROXY_PORT}",
+      "-Dhttp.nonProxyHosts=cbioportal-session,${NOPROXY_HOSTS:-}",
       "-Dfrontend.config=/cbioportal/frontend.json",
       "-Dskin.right_logo=${LOGO:-pm4onco.png}",
       "-Dspring.config.location=cbioportal/application.properties",
