--- a/compose-research.yml
+++ b/compose-research.yml
@@ -34,7 +34,7 @@ services:
       "-Dfilter_groups_by_appname=false",
       "-Dhttps.proxyHost=${HTTPS_PROXY_HOST}",
       "-Dhttps.proxyPort=${HTTPS_PROXY_PORT}",
-      "-Dhttp.nonProxyHosts=cbioportal-session,${NOPROXY_HOSTS:-}",
+      "-Dhttp.nonProxyHosts=cbioportal-session|${NOPROXY_HOSTS:-}",
       "-Dskin.right_logo=${LOGO:-pm4onco.png}",
       "-Dspring.config.location=cbioportal/application.properties",
       "-Dauthenticate=${AUTHENTICATE:-false}",
