--- a/tools/MtbImporter/docker-compose.yml
+++ b/tools/MtbImporter/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "./settings.yaml:/app/settings.yaml"
       - "./input:/app/input"
-      - "./mapper:/mapper"
+      - "./mapper:/app/mapper"
       - "./processed:/app/processed"
       - "../../study:/app/study"
       - "./template:/app/template"
