fix github actions

--- a/.github/workflows/docker-build-research.yml
+++ b/.github/workflows/docker-build-research.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4
 
       - name: Build research containers
-        run: docker-compose -f compose-research.yml build cbioportal
+        run: docker compose -f compose-research.yml build cbioportal
       - name: Build research cbioproxy
-        run: docker-compose -f compose-research.yml build cbioproxy
+        run: docker compose -f compose-research.yml build cbioproxy
