--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4
 
       - name: Build care cBioPortal
-        run: docker-compose -f compose.yml build cbioportal
+        run: docker compose -f compose.yml build cbioportal
       - name: Build care cbioproxy
-        run: docker-compose -f compose.yml build cbioproxy
+        run: docker compose -f compose.yml build cbioproxy
