--- a/services/cbioproxy/Dockerfile
+++ b/services/cbioproxy/Dockerfile
@@ -1,7 +1,7 @@
 FROM ghcr.io/buschlab/cbioportal:${RELEASE:-latest} as static
 
 FROM docker.io/openresty/openresty:1.21.4.1-7-alpine-fat
-RUN apk update && apk add git ca-certificates && rm -rf /var/cache/apk/*
+RUN apk update && apk add git ca-certificates openssl && rm -rf /var/cache/apk/*
 COPY --from=static /cbioportal-webapp /usr/share/nginx/html
 RUN rm /etc/nginx/conf.d/default.conf \
     && /usr/local/openresty/luajit/bin/luarocks install lua-resty-openidc
