--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-# Release version e.g. 2022q2 or simply latest
-RELEASE=2024q1
+# Select flavor: care, research, dev
+FLAVOR=care
+
+# Release version e.g. 2024q4 or simply latest
+RELEASE=2024q4
 
 # Network configuration
 PORT=8080
