--- a/.github/workflows/docker-build-dev.yml
+++ b/.github/workflows/docker-build-dev.yml
@@ -18,9 +18,9 @@ jobs:
 
       - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4
       - name: Build dev containers
-        run: docker compose -f compose-dev.yml build cbioportal
+        run: FLAVOR=dev docker compose build cbioportal
       - name: Build dev cbioproxy
-        run: docker compose -f compose-dev.yml build cbioproxy
+        run: FLAVOR=dev docker compose build cbioproxy
       - name: Login to Docker registry
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         uses: docker/login-action@v3
@@ -30,7 +30,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Push cbioportal
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
-        run: docker compose -f compose-dev.yml build cbioportal --push
+        run: FLAVOR=dev docker compose build cbioportal --push
       - name: Push cbioproxy
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
-        run: docker compose -f compose-dev.yml build cbioproxy --push
+        run: FLAVOR=dev docker compose build cbioproxy --push
