--- a/.github/workflows/docker-build-research.yml
+++ b/.github/workflows/docker-build-research.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4
 
       - name: Build research containers
-        run: docker compose -f compose-research.yml build cbioportal
+        run: FLAVOR=research docker compose build cbioportal
       - name: Build research cbioproxy
-        run: docker compose -f compose-research.yml build cbioproxy
+        run: FLAVOR=research docker compose build cbioproxy
