--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4
 
       - name: Build care cBioPortal
-        run: docker compose -f compose.yml build cbioportal
+        run: FLAVOR=care docker compose build cbioportal
       - name: Build care cbioproxy
-        run: docker compose -f compose.yml build cbioproxy
+        run: FLAVOR=care docker compose build cbioproxy
