fix review comment and use same order everywhere

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Select flavor: care, research, dev
-FLAVOR=care
+# Select flavor: mtb, research, dev
+FLAVOR=mtb
 
 # Release version e.g. 2024q4 or simply latest
 RELEASE=2024q4
