--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Docker build (care)
+name: Docker build (mtb)
 
 on:
   push:
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4
 
-      - name: Build care cBioPortal
-        run: FLAVOR=care docker compose build cbioportal
-      - name: Build care cbioproxy
-        run: FLAVOR=care docker compose build cbioproxy
+      - name: Build mtb cBioPortal
+        run: FLAVOR=mtb docker compose build cbioportal
+      - name: Build mtb cbioproxy
+        run: FLAVOR=mtb docker compose build cbioproxy
